--- a/xOrdineServizio/FPrima.resx
+++ b/xOrdineServizio/FPrima.resx
@@ -124,6 +124,12 @@
   <data name="PreferenzeToolStripMenuItem1.Text" xml:space="preserve">
     <value>Preferenze</value>
   </data>
+  <data name="StampaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 20</value>
+  </data>
+  <data name="StampaToolStripMenuItem.Text" xml:space="preserve">
+    <value>Stampa...</value>
+  </data>
   <data name="ToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
     <value>150, 22</value>
   </data>
@@ -154,23 +160,17 @@
   <data name="SopralluogoToolStripMenuItem.Text" xml:space="preserve">
     <value>Sopralluogo...</value>
   </data>
-  <data name="StampaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 20</value>
-  </data>
-  <data name="StampaToolStripMenuItem.Text" xml:space="preserve">
-    <value>Stampa...</value>
-  </data>
   <data name="CercaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="CercaToolStripMenuItem.Text" xml:space="preserve">
     <value>Cerca...</value>
   </data>
   <data name="ToolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>247, 6</value>
+    <value>249, 6</value>
   </data>
   <data name="ExportToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="ExportToolStripMenuItem.Text" xml:space="preserve">
     <value>export...</value>
@@ -180,7 +180,7 @@
     <value>False</value>
   </data>
   <data name="ImportToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="ImportToolStripMenuItem.Text" xml:space="preserve">
     <value>import...</value>
@@ -189,25 +189,25 @@
     <value>False</value>
   </data>
   <data name="ToolStripSeparator3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>247, 6</value>
+    <value>249, 6</value>
   </data>
   <data name="ToolStripSeparator3.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="CancellaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="CancellaToolStripMenuItem.Text" xml:space="preserve">
     <value>Cancella...</value>
   </data>
   <data name="CercaAggiornamentiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="CercaAggiornamentiToolStripMenuItem.Text" xml:space="preserve">
     <value>Controlla aggiornamenti...</value>
   </data>
   <data name="ToolStripMenuItemLOG.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="ToolStripMenuItemLOG.Text" xml:space="preserve">
     <value>Finestra log</value>
@@ -216,28 +216,34 @@
     <value>False</value>
   </data>
   <data name="ToolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>247, 6</value>
+    <value>249, 6</value>
   </data>
   <data name="EseguiBackupDBToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="EseguiBackupDBToolStripMenuItem.Text" xml:space="preserve">
     <value>Esegui backup DB e preferenze</value>
   </data>
   <data name="RipristinaBackupDBToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="RipristinaBackupDBToolStripMenuItem.Text" xml:space="preserve">
     <value>Ripristina backup DB e preferenze</value>
   </data>
   <data name="ToolStripSeparator4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>247, 6</value>
+    <value>249, 6</value>
   </data>
   <data name="RevisioneTabelleDatiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>250, 22</value>
+    <value>252, 22</value>
   </data>
   <data name="RevisioneTabelleDatiToolStripMenuItem.Text" xml:space="preserve">
     <value>Revisione tabelle dati...</value>
+  </data>
+  <data name="RevisioneTabelleComuniEStariiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>252, 22</value>
+  </data>
+  <data name="RevisioneTabelleComuniEStariiToolStripMenuItem.Text" xml:space="preserve">
+    <value>Revisione tabella Comuni e Stati...</value>
   </data>
   <data name="StrumentiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>80, 20</value>
@@ -245,23 +251,17 @@
   <data name="StrumentiToolStripMenuItem.Text" xml:space="preserve">
     <value>Strumenti...</value>
   </data>
-  <data name="LogoutToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>121, 22</value>
-  </data>
-  <data name="LogoutToolStripMenuItem1.Text" xml:space="preserve">
-    <value>Logout...</value>
-  </data>
   <data name="SessioneToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>73, 20</value>
   </data>
   <data name="SessioneToolStripMenuItem.Text" xml:space="preserve">
     <value>Sessione...</value>
   </data>
-  <data name="VersioneToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 22</value>
+  <data name="LogoutToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>121, 22</value>
   </data>
-  <data name="VersioneToolStripMenuItem.Text" xml:space="preserve">
-    <value>About OrSe</value>
+  <data name="LogoutToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Logout...</value>
   </data>
   <data name="HelpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>44, 20</value>
@@ -269,17 +269,23 @@
   <data name="HelpToolStripMenuItem.Text" xml:space="preserve">
     <value>Help</value>
   </data>
-  <data name="OpzioniToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 22</value>
+  <data name="VersioneToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>135, 22</value>
   </data>
-  <data name="OpzioniToolStripMenuItem.Text" xml:space="preserve">
-    <value>Opzioni...</value>
+  <data name="VersioneToolStripMenuItem.Text" xml:space="preserve">
+    <value>About OrSe</value>
   </data>
   <data name="PreferenzeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>72, 20</value>
   </data>
   <data name="PreferenzeToolStripMenuItem.Text" xml:space="preserve">
     <value>Preferenze</value>
+  </data>
+  <data name="OpzioniToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>124, 22</value>
+  </data>
+  <data name="OpzioniToolStripMenuItem.Text" xml:space="preserve">
+    <value>Opzioni...</value>
   </data>
   <data name="FlowLayoutPanel2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -387,30 +393,6 @@
   <data name="TableLayoutPanel2.LayoutSettings" type="System.Windows.Forms.TableLayoutSettings, System.Windows.Forms">
     <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="FlowLayoutPanel1" Row="2" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="FlowLayoutPanel2" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="Percent,100" /&gt;&lt;Rows Styles="AutoSize,0,AutoSize,0,AutoSize,0,Absolute,20" /&gt;&lt;/TableLayoutSettings&gt;</value>
   </data>
-  <data name="labelInfoOS.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="labelInfoOS.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 28pt</value>
-  </data>
-  <data name="labelInfoOS.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="labelInfoOS.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 6</value>
-  </data>
-  <data name="labelInfoOS.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 6, 3, 3</value>
-  </data>
-  <data name="labelInfoOS.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 44</value>
-  </data>
-  <data name="labelInfoOS.TabIndex" type="System.Int32, mscorlib">
-    <value>13</value>
-  </data>
-  <data name="labelInfoOS.Text" xml:space="preserve">
-    <value>Label1</value>
-  </data>
   <data name="&gt;&gt;labelInfoOS.Name" xml:space="preserve">
     <value>labelInfoOS</value>
   </data>
@@ -446,6 +428,42 @@
   </data>
   <data name="&gt;&gt;FlowLayoutPanel3.ZOrder" xml:space="preserve">
     <value>1</value>
+  </data>
+  <data name="labelInfoOS.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="labelInfoOS.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 28pt</value>
+  </data>
+  <data name="labelInfoOS.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="labelInfoOS.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 6</value>
+  </data>
+  <data name="labelInfoOS.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 6, 3, 3</value>
+  </data>
+  <data name="labelInfoOS.Size" type="System.Drawing.Size, System.Drawing">
+    <value>134, 44</value>
+  </data>
+  <data name="labelInfoOS.TabIndex" type="System.Int32, mscorlib">
+    <value>13</value>
+  </data>
+  <data name="labelInfoOS.Text" xml:space="preserve">
+    <value>Label1</value>
+  </data>
+  <data name="&gt;&gt;labelInfoOS.Name" xml:space="preserve">
+    <value>labelInfoOS</value>
+  </data>
+  <data name="&gt;&gt;labelInfoOS.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;labelInfoOS.Parent" xml:space="preserve">
+    <value>FlowLayoutPanel3</value>
+  </data>
+  <data name="&gt;&gt;labelInfoOS.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="ButtonRubrica.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 28pt</value>
@@ -732,6 +750,54 @@
   <data name="FlowLayoutPanelEsterno.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="&gt;&gt;btnRubrica.Name" xml:space="preserve">
+    <value>btnRubrica</value>
+  </data>
+  <data name="&gt;&gt;btnRubrica.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnRubrica.Parent" xml:space="preserve">
+    <value>FlowLayoutPanelEsterno</value>
+  </data>
+  <data name="&gt;&gt;btnRubrica.ZOrder" xml:space="preserve">
+    <value>4</value>
+  </data>
+  <data name="&gt;&gt;Button1.Name" xml:space="preserve">
+    <value>Button1</value>
+  </data>
+  <data name="&gt;&gt;Button1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;Button1.Parent" xml:space="preserve">
+    <value>FlowLayoutPanelEsterno</value>
+  </data>
+  <data name="&gt;&gt;Button1.ZOrder" xml:space="preserve">
+    <value>6</value>
+  </data>
+  <data name="FlowLayoutPanelEsterno.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
+  </data>
+  <data name="FlowLayoutPanelEsterno.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 77</value>
+  </data>
+  <data name="FlowLayoutPanelEsterno.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1008, 435</value>
+  </data>
+  <data name="FlowLayoutPanelEsterno.TabIndex" type="System.Int32, mscorlib">
+    <value>28</value>
+  </data>
+  <data name="&gt;&gt;FlowLayoutPanelEsterno.Name" xml:space="preserve">
+    <value>FlowLayoutPanelEsterno</value>
+  </data>
+  <data name="&gt;&gt;FlowLayoutPanelEsterno.Type" xml:space="preserve">
+    <value>System.Windows.Forms.FlowLayoutPanel, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;FlowLayoutPanelEsterno.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;FlowLayoutPanelEsterno.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="btnRubrica.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 28pt</value>
   </data>
@@ -852,30 +918,6 @@
   <data name="&gt;&gt;Button1.ZOrder" xml:space="preserve">
     <value>6</value>
   </data>
-  <data name="FlowLayoutPanelEsterno.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <data name="FlowLayoutPanelEsterno.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 77</value>
-  </data>
-  <data name="FlowLayoutPanelEsterno.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1008, 435</value>
-  </data>
-  <data name="FlowLayoutPanelEsterno.TabIndex" type="System.Int32, mscorlib">
-    <value>28</value>
-  </data>
-  <data name="&gt;&gt;FlowLayoutPanelEsterno.Name" xml:space="preserve">
-    <value>FlowLayoutPanelEsterno</value>
-  </data>
-  <data name="&gt;&gt;FlowLayoutPanelEsterno.Type" xml:space="preserve">
-    <value>System.Windows.Forms.FlowLayoutPanel, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;FlowLayoutPanelEsterno.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;FlowLayoutPanelEsterno.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>412, 17</value>
   </metadata>
@@ -922,7 +964,7 @@
     <value>VerticalLabel2</value>
   </data>
   <data name="&gt;&gt;VerticalLabel2.Type" xml:space="preserve">
-    <value>OrSe.verticalLabel, OrSe, Version=2.70.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>OrSe.verticalLabel, OrSe, Version=2.70.4.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -2071,9 +2113,6 @@
         AAAAAB///////////////wAAAAD///////8=
 </value>
   </data>
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
   </data>
@@ -2295,6 +2334,12 @@
   </data>
   <data name="&gt;&gt;DbAlegatoADataSet1.Type" xml:space="preserve">
     <value>OrSe.dbAlegatoADataSet, dbAlegatoADataSet.Designer.vb, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;RevisioneTabelleComuniEStariiToolStripMenuItem.Name" xml:space="preserve">
+    <value>RevisioneTabelleComuniEStariiToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;RevisioneTabelleComuniEStariiToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>FPrima</value>
