--- a/xOrdineServizio/FPrima.resx
+++ b/xOrdineServizio/FPrima.resx
@@ -264,10 +264,16 @@
     <value>Sessione...</value>
   </data>
   <data name="VersioneToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="VersioneToolStripMenuItem.Text" xml:space="preserve">
     <value>About OrSe</value>
+  </data>
+  <data name="ContattiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
+  </data>
+  <data name="ContattiToolStripMenuItem.Text" xml:space="preserve">
+    <value>Contatti...</value>
   </data>
   <data name="HelpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>44, 20</value>
@@ -863,30 +869,6 @@
   </data>
   <data name="&gt;&gt;Button1.ZOrder" xml:space="preserve">
     <value>6</value>
-  </data>
-  <data name="btnPost.Location" type="System.Drawing.Point, System.Drawing">
-    <value>309, 185</value>
-  </data>
-  <data name="btnPost.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="btnPost.TabIndex" type="System.Int32, mscorlib">
-    <value>12</value>
-  </data>
-  <data name="btnPost.Text" xml:space="preserve">
-    <value>Button2</value>
-  </data>
-  <data name="&gt;&gt;btnPost.Name" xml:space="preserve">
-    <value>btnPost</value>
-  </data>
-  <data name="&gt;&gt;btnPost.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnPost.Parent" xml:space="preserve">
-    <value>FlowLayoutPanelEsterno</value>
-  </data>
-  <data name="&gt;&gt;btnPost.ZOrder" xml:space="preserve">
-    <value>7</value>
   </data>
   <data name="FlowLayoutPanelEsterno.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -2249,6 +2231,12 @@
     <value>VersioneToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;VersioneToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;ContattiToolStripMenuItem.Name" xml:space="preserve">
+    <value>ContattiToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;ContattiToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;PreferenzeToolStripMenuItem.Name" xml:space="preserve">
