--- a/trunk/xOrdineServizio/FPrima.resx
+++ b/trunk/xOrdineServizio/FPrima.resx
@@ -264,13 +264,13 @@
     <value>Sessione...</value>
   </data>
   <data name="VersioneToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>135, 22</value>
   </data>
   <data name="VersioneToolStripMenuItem.Text" xml:space="preserve">
     <value>About OrSe</value>
   </data>
   <data name="ContattiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>135, 22</value>
   </data>
   <data name="ContattiToolStripMenuItem.Text" xml:space="preserve">
     <value>Contatti...</value>
@@ -918,7 +918,7 @@
   <metadata name="OrdineServizioTableAdapter1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>550, 56</value>
   </metadata>
-  <metadata name="DbAlegatoADataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="DbAlegatoADataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>383, 56</value>
   </metadata>
   <metadata name="BackgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2297,13 +2297,13 @@
     <value>OrdineServizioTableAdapter1</value>
   </data>
   <data name="&gt;&gt;OrdineServizioTableAdapter1.Type" xml:space="preserve">
-    <value>OrSe.dbAlegatoADataSetTableAdapters.ordineServizioTableAdapter, dbAlegatoADataSet.Designer.vb, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>OrSe.dbAlegatoADataSetTableAdapters.ordineServizioTableAdapter, OrSe, Version=2.80.4.1, Culture=neutral, PublicKeyToken=null</value>
   </data>
-  <data name="&gt;&gt;DbAlegatoADataSet1.Name" xml:space="preserve">
-    <value>DbAlegatoADataSet1</value>
+  <data name="&gt;&gt;DbAlegatoADataSet.Name" xml:space="preserve">
+    <value>DbAlegatoADataSet</value>
   </data>
-  <data name="&gt;&gt;DbAlegatoADataSet1.Type" xml:space="preserve">
-    <value>OrSe.dbAlegatoADataSet, dbAlegatoADataSet.Designer.vb, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  <data name="&gt;&gt;DbAlegatoADataSet.Type" xml:space="preserve">
+    <value>OrSe.dbAlegatoADataSet, OrSe, Version=2.80.4.1, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;BackgroundWorker1.Name" xml:space="preserve">
     <value>BackgroundWorker1</value>
